@@ -1,3 +1,6 @@
+Upcoming:
+- Fix where preview of the support blocks would break due to wrong side
+
 1.18-4.0.5:
 - Fixed the DIRT tag to be compatible with latest Forge
 
